Enhance website structure and functionality for wild plant coaching service
Update `index.html` to improve the layout with new sections and a footer, and modify the title and meta description for better SEO. Expand `script.js` to include functions for fetching and displaying content from Sanity CMS for the hero and about sections.

--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,30 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <title>Wildpflanzen entdecken und genießen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wildpflanzen mit Karin - Coaching Braunschweig / Wolfenbüttel</title>
+    <meta name="description" content="Coaching zu essbaren Wildpflanzen in Braunschweig und Wolfenbüttel">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+
+    <header id="hero">
         <h1>Wildpflanzen mit Karin</h1>
         <p>Essbare Wildpflanzen Coaching | Braunschweig & Wolfenbüttel</p>
     </header>
-    <div class="content">
-        <h2>Willkommen bei Deinem Wildpflanzen-Coaching</h2>
-        <p>Entdecke die Schätze der Natur direkt vor Deiner Haustür. Ich begleite Dich dabei, essbare Wildpflanzen sicher zu bestimmen und in Deinen Alltag zu integrieren.</p>
-        <p>Inhalte werden bald über unser Sanity CMS verwaltet.</p>
-        <a href="mailto:info@example.com" class="cta">Kontakt aufnehmen</a>
-    </div>
+
+    <main>
+        <section id="about"></section>
+        <section id="offers"></section>
+        <section id="season"></section>
+        <section id="gallery"></section>
+        <section id="certificate"></section>
+        <section id="contact"></section>
+    </main>
+
+    <footer>
+        <p>© Karin · Wildpflanzen entdecken und genießen</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
