Add contact section and impressum link to the website
Introduce a new contact section in script.js with a dynamic email link and relevant content. Update index.html to include an impressum link in the footer. Enhance styles.css with new styles for the contact section and footer links, ensuring a cohesive design and improved user experience.

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 
     <footer>
         <p>© Karin · Wildpflanzen entdecken und genießen</p>
+        <p><a href="impressum.html" class="footer-link">Impressum</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
