Add navigation bar and mobile menu functionality
Introduce a new navigation bar in index.html with links to various sections of the website. Implement mobile menu toggle functionality in script.js for improved user experience on smaller screens. Enhance styles.css with new styles for the navigation bar, ensuring a cohesive design and responsive behavior.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,25 @@
 </head>
 <body>
 
+    <nav class="main-nav">
+        <div class="nav-container">
+            <a href="#" class="nav-logo">Wildpflanzen mit Karin</a>
+            <button class="nav-toggle" aria-label="Menü öffnen">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav-menu">
+                <li><a href="#about">Über mich</a></li>
+                <li><a href="#offers">Angebote</a></li>
+                <li><a href="#season">Saison</a></li>
+                <li><a href="#gallery">Galerie</a></li>
+                <li><a href="#certificate">Zertifikate</a></li>
+                <li><a href="#contact">Kontakt</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <header id="hero">
         <h1>Wildpflanzen mit Karin</h1>
         <p>Essbare Wildpflanzen Coaching | Braunschweig & Wolfenbüttel</p>
