Update footer links to include Datenschutz and adjust styles for impressum and datenschutz pages
Enhance the footer in both impressum.html and index.html to include a link to the Datenschutz page alongside the Impressum link. Update styles.css to apply consistent styling for both pages, ensuring a cohesive design.

--- a/public/impressum.html
+++ b/public/impressum.html
@@ -39,6 +39,10 @@
     <footer>
         <p><a href="index.html">← Zurück zur Startseite</a></p>
         <p>© Karin · Wildpflanzen entdecken und genießen</p>
+        <p>
+            <a href="impressum.html" class="footer-link">Impressum</a> | 
+            <a href="datenschutz.html" class="footer-link">Datenschutz</a>
+        </p>
     </footer>
     <script src="impressum.js"></script>
 </body>
