--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,10 @@
 
     <footer>
         <p>© Karin · Wildpflanzen entdecken und genießen</p>
-        <p><a href="impressum.html" class="footer-link">Impressum</a></p>
+        <p>
+            <a href="impressum.html" class="footer-link">Impressum</a> | 
+            <a href="datenschutz.html" class="footer-link">Datenschutz</a>
+        </p>
     </footer>
     <script src="script.js"></script>
 </body>
