--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <nav class="main-nav">
         <div class="nav-container">
-            <a href="#" class="nav-logo">Wildpflanzen mit Karin</a>
+            <a href="#hero" class="nav-logo">Wildpflanzen mit Karin</a>
             <button class="nav-toggle" aria-label="Menü öffnen">
                 <span></span>
                 <span></span>
@@ -46,6 +46,9 @@
             <a href="datenschutz.html" class="footer-link">Datenschutz</a>
         </p>
     </footer>
+    <button class="scroll-to-top" aria-label="Nach oben scrollen" title="Nach oben">
+        ↑
+    </button>
     <script src="script.js"></script>
 </body>
 </html>
