Implement dynamic navigation loading and update hero content placeholders
Refactor navigation in index.html, impressum.html, and datenschutz.html to load dynamically from Sanity, replacing static links with placeholders. Enhance JavaScript files to fetch navigation items and update the logo text accordingly. This change improves site maintainability and user experience by allowing content updates without code changes.

--- a/public/index.html
+++ b/public/index.html
@@ -11,23 +11,20 @@
 
     <nav class="main-nav">
         <div class="nav-container">
-            <a href="#hero" class="nav-logo">Wildpflanzen mit Karin</a>
+            <a href="#hero" class="nav-logo">Lädt...</a>
             <button class="nav-toggle" aria-label="Menü öffnen">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
             <ul class="nav-menu">
-                <li><a href="#about">Über mich</a></li>
-                <li><a href="#certificate">Zertifikate</a></li>
-                <li><a href="#contact">Kontakt</a></li>
+                <!-- Navigation wird dynamisch aus Sanity geladen -->
             </ul>
         </div>
     </nav>
 
     <header id="hero">
-        <h1>Wildpflanzen mit Karin</h1>
-        <p>Essbare Wildpflanzen Coaching | Braunschweig & Wolfenbüttel</p>
+        <!-- Hero content wird dynamisch aus Sanity geladen -->
     </header>
 
     <main>
