--- a/public/datenschutz.html
+++ b/public/datenschutz.html
@@ -10,23 +10,20 @@
 
     <nav class="main-nav">
         <div class="nav-container">
-            <a href="index.html" class="nav-logo">Wildpflanzen mit Karin</a>
+            <a href="index.html" class="nav-logo">Lädt...</a>
             <button class="nav-toggle" aria-label="Menü öffnen">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
             <ul class="nav-menu">
-                <li><a href="index.html#about">Über mich</a></li>
-                <li><a href="index.html#certificate">Zertifikate</a></li>
-                <li><a href="index.html#contact">Kontakt</a></li>
+                <!-- Navigation wird dynamisch aus Sanity geladen -->
             </ul>
         </div>
     </nav>
 
     <header id="hero">
-        <h1>Wildpflanzen mit Karin</h1>
-        <p>Essbare Wildpflanzen Coaching | Braunschweig & Wolfenbüttel</p>
+        <!-- Hero content wird dynamisch aus Sanity geladen -->
     </header>
 
     <main>
