--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Wildpflanzen entdecken und genießen</title>
+    <title>Lädt...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Coaching zu essbaren Wildpflanzen in Braunschweig und Wolfenbüttel">
+    <meta name="description" content="">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        <p>© Karin · Wildpflanzen entdecken und genießen</p>
+        <p id="footer-text">Lädt...</p>
         <p>
             <a href="impressum.html" class="footer-link">Impressum</a> | 
             <a href="datenschutz.html" class="footer-link">Datenschutz</a>
