Update privacy policy and imprint pages with additional legal information and font styling
Enhance datenschutz.html and impressum.html by adding sections on data access and copyright, as well as a reference to the EU dispute resolution platform. Update the body tag to include a data attribute for font styling, and modify styles.css to incorporate new font options for improved typography across the site.

--- a/public/datenschutz.html
+++ b/public/datenschutz.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-fonts="c">
 
     <nav class="main-nav">
         <div class="nav-container">
@@ -45,9 +45,12 @@
                 </p>
 
                 <p><strong>3. Datenerfassung auf dieser Website</strong></p>
+
+                <p><strong>Zugriffsdaten</strong><br>
+                Beim Aufruf dieser Website können durch den Betreiber des Hosting-Servers automatisch Zugriffsdaten (z. B. IP-Adresse, Datum, Uhrzeit, aufgerufene Seite) in Logdateien erfasst werden. Diese Daten werden nur zur Sicherstellung des Betriebs und zur technischen Abwicklung ausgewertet und nicht mit anderen Datenquellen zusammengeführt. Rechtsgrundlage ist Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse an der Bereitstellung der Website).</p>
                 
                 <p><strong>Kontaktaufnahme</strong><br>
-                Wenn Sie uns per E-Mail kontaktieren, werden Ihre Angaben aus dem Anfrageformular inklusive der von Ihnen dort angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den Fall von Anschlussfragen bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung weiter.</p>
+                Wenn Sie uns per E-Mail kontaktieren, werden Ihre Angaben inklusive der von Ihnen angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den Fall von Anschlussfragen bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung weiter. Rechtsgrundlage ist Art. 6 Abs. 1 lit. b DSGVO (Vertragsanbahnung) bzw. Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse an der Bearbeitung Ihrer Anfrage). Die Daten werden gelöscht, sobald sie für die Erreichung des Zwecks nicht mehr erforderlich sind und keine gesetzlichen Aufbewahrungspflichten entgegenstehen.</p>
 
                 <p><strong>4. Externe Datenspeicherung</strong></p>
                 
@@ -58,9 +61,12 @@
                 <p>Diese Website verwendet keine Cookies.</p>
 
                 <p><strong>6. Ihre Rechte</strong></p>
-                <p>Sie haben jederzeit das Recht, Auskunft über Ihre bei uns gespeicherten personenbezogenen Daten zu erhalten. Außerdem haben Sie das Recht auf Berichtigung, Löschung oder Einschränkung der Verarbeitung Ihrer personenbezogenen Daten sowie ein Widerspruchsrecht gegen die Verarbeitung sowie das Recht auf Datenübertragbarkeit.</p>
+                <p>Sie haben jederzeit das Recht auf Auskunft (Art. 15 DSGVO), Berichtigung (Art. 16 DSGVO), Löschung (Art. 17 DSGVO), Einschränkung der Verarbeitung (Art. 18 DSGVO), Datenübertragbarkeit (Art. 20 DSGVO) sowie auf Widerspruch gegen die Verarbeitung (Art. 21 DSGVO). Bitte wenden Sie sich hierfür an die unter Abschnitt 2 genannte verantwortliche Stelle.</p>
 
-                <p><strong>7. Widerspruch gegen Datenverarbeitung</strong></p>
+                <p><strong>7. Beschwerde bei einer Aufsichtsbehörde</strong></p>
+                <p>Sie haben das Recht, sich bei einer Datenschutz-Aufsichtsbehörde zu beschweren. Zuständig ist die Aufsichtsbehörde Ihres üblichen Aufenthaltsortes, Ihres Arbeitsplatzes oder unseres Sitzes.</p>
+
+                <p><strong>8. Widerspruch gegen Datenverarbeitung</strong></p>
                 <p>Sie haben das Recht, der Verarbeitung Ihrer personenbezogenen Daten zu widersprechen. Bitte kontaktieren Sie uns hierfür unter der im Impressum angegebenen E-Mail-Adresse.</p>
             </div>
         </section>
