--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-fonts="c">
 
     <nav class="main-nav">
         <div class="nav-container">
