Update privacy policy to include hosting information and GitHub Privacy Statement
Revise the "Zugriffsdaten" section in datenschutz.html to specify that the website is hosted on GitHub Pages and provide a link to the GitHub Privacy Statement. This enhances transparency regarding data collection practices.

--- a/public/datenschutz.html
+++ b/public/datenschutz.html
@@ -46,8 +46,8 @@
 
                 <p><strong>3. Datenerfassung auf dieser Website</strong></p>
 
-                <p><strong>Zugriffsdaten</strong><br>
-                Beim Aufruf dieser Website können durch den Betreiber des Hosting-Servers automatisch Zugriffsdaten (z. B. IP-Adresse, Datum, Uhrzeit, aufgerufene Seite) in Logdateien erfasst werden. Diese Daten werden nur zur Sicherstellung des Betriebs und zur technischen Abwicklung ausgewertet und nicht mit anderen Datenquellen zusammengeführt. Rechtsgrundlage ist Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse an der Bereitstellung der Website).</p>
+                <p><strong>Zugriffsdaten / Hosting</strong><br>
+                Diese Website wird bei GitHub Pages (GitHub, Inc., 88 Colin P. Kelly Jr. Street, San Francisco, CA 94107, USA) gehostet. Beim Aufruf können durch den Betreiber des Hosting-Servers automatisch Zugriffsdaten (z. B. IP-Adresse, Datum, Uhrzeit, aufgerufene Seite) in Logdateien erfasst werden. Diese Daten werden zur Sicherstellung des Betriebs und zur technischen Abwicklung ausgewertet und nicht mit anderen Datenquellen zusammengeführt. Rechtsgrundlage ist Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse an der Bereitstellung der Website). Weitere Informationen: <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement" target="_blank" rel="noopener noreferrer">GitHub Privacy Statement</a>.</p>
                 
                 <p><strong>Kontaktaufnahme</strong><br>
                 Wenn Sie uns per E-Mail kontaktieren, werden Ihre Angaben inklusive der von Ihnen angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den Fall von Anschlussfragen bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung weiter. Rechtsgrundlage ist Art. 6 Abs. 1 lit. b DSGVO (Vertragsanbahnung) bzw. Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse an der Bearbeitung Ihrer Anfrage). Die Daten werden gelöscht, sobald sie für die Erreichung des Zwecks nicht mehr erforderlich sind und keine gesetzlichen Aufbewahrungspflichten entgegenstehen.</p>
