Update navigation links to point directly to the homepage
Change footer links in datenschutz.html and impressum.html, as well as logo links in datenschutz.js, impressum.js, and script.js, to direct users to the homepage instead of the hero section. This simplifies navigation and improves user experience.

--- a/public/datenschutz.html
+++ b/public/datenschutz.html
@@ -73,7 +73,7 @@
     </main>
 
     <footer>
-        <p><a href="index.html#hero">← Zurück zur Startseite</a></p>
+        <p><a href="index.html">← Zurück zur Startseite</a></p>
         <p>© Karin · Wildpflanzen entdecken und genießen</p>
     </footer>
     <script src="datenschutz.js"></script>
