--- a/public/impressum.html
+++ b/public/impressum.html
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <p><a href="index.html#hero">← Zurück zur Startseite</a></p>
+        <p><a href="index.html">← Zurück zur Startseite</a></p>
         <p>© Karin · Wildpflanzen entdecken und genießen</p>
         <p>
             <a href="impressum.html" class="footer-link">Impressum</a> | 
