--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <nav class="main-nav">
         <div class="nav-container">
-            <a href="#hero" class="nav-logo">Lädt...</a>
+            <a href="index.html" class="nav-logo">Lädt...</a>
             <button class="nav-toggle" aria-label="Menü öffnen">
                 <span></span>
                 <span></span>
