Update index.html with new title and meta tags for improved SEO and social sharing
Revise the page title to "Wildpflanzen mit Karin – Entdecken und genießen" and enhance the meta description for better search engine visibility. Add Open Graph and Twitter Card meta tags to optimize content sharing on social media platforms.

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,20 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Lädt...</title>
+    <title>Wildpflanzen mit Karin – Entdecken und genießen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Coaching zu essbaren Wildpflanzen: Einzelcoaching, Gruppenkurse und Workshops. Die Vielfalt der Natur entdecken.">
+    <!-- Vorschau beim Teilen (WhatsApp, Telegram, etc.) – Bild-URL unten anpassen -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Wildpflanzen mit Karin – Entdecken und genießen">
+    <meta property="og:description" content="Coaching zu essbaren Wildpflanzen: Einzelcoaching, Gruppenkurse und Workshops. Die Vielfalt der Natur entdecken.">
+    <meta property="og:image" content="https://DEINE-GITHUB-PAGES-URL/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Wildpflanzen mit Karin – Entdecken und genießen">
+    <meta name="twitter:description" content="Coaching zu essbaren Wildpflanzen: Einzelcoaching, Gruppenkurse und Workshops.">
+    <meta name="twitter:image" content="https://DEINE-GITHUB-PAGES-URL/og-image.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body data-fonts="c">
