--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Wildpflanzen mit Karin – Entdecken und genießen">
     <meta property="og:description" content="Coaching zu essbaren Wildpflanzen: Einzelcoaching, Gruppenkurse und Workshops. Die Vielfalt der Natur entdecken.">
-    <meta property="og:image" content="https://DEINE-GITHUB-PAGES-URL/og-image.jpg">
+    <meta property="og:image" content="https://wildpflanzen-mit-karin.de/og-image.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Wildpflanzen mit Karin – Entdecken und genießen">
     <meta name="twitter:description" content="Coaching zu essbaren Wildpflanzen: Einzelcoaching, Gruppenkurse und Workshops.">
-    <meta name="twitter:image" content="https://DEINE-GITHUB-PAGES-URL/og-image.jpg">
+    <meta name="twitter:image" content="https://wildpflanzen-mit-karin.de/og-image.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body data-fonts="c">
