Add favicon support and update README with favicon instructions
Include favicon links in index.html for browser tab and app icons. Update README.md with detailed instructions on generating and replacing favicon files using favicon.io, enhancing user guidance for future updates.

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
     <meta name="twitter:title" content="Wildpflanzen mit Karin – Entdecken und genießen">
     <meta name="twitter:description" content="Coaching zu essbaren Wildpflanzen: Einzelcoaching, Gruppenkurse und Workshops.">
     <meta name="twitter:image" content="https://wildpflanzen-mit-karin.de/og-image.jpg">
+    <!-- Favicons (favicon.io): Tab, Lesezeichen, iOS + Android „Zum Home-Bildschirm“ -->
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body data-fonts="c">
